--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,16 @@ out/
 
 ### VS Code ###
 .vscode/
+mvc2-v2022-05-15/v2022-05-15/0. 스프링 MVC 전체 목차 v2022-05-15.pdf
+mvc2-v2022-05-15/v2022-05-15/1. 타임리프 - 기본 기능.pdf
+mvc2-v2022-05-15/v2022-05-15/10. 스프링 타입 컨버터.pdf
+mvc2-v2022-05-15/v2022-05-15/11. 파일 업로드.pdf
+mvc2-v2022-05-15/v2022-05-15/12. 다음으로.pdf
+mvc2-v2022-05-15/v2022-05-15/2. 타임리프 - 스프링 통합과 폼.pdf
+mvc2-v2022-05-15/v2022-05-15/3. 메시지, 국제화.pdf
+mvc2-v2022-05-15/v2022-05-15/4. 검증1 - Validation.pdf
+mvc2-v2022-05-15/v2022-05-15/5. 검증2 - Bean Validation.pdf
+mvc2-v2022-05-15/v2022-05-15/6. 로그인 처리1 - 쿠키, 세션.pdf
+mvc2-v2022-05-15/v2022-05-15/7. 로그인 처리2 - 필터, 인터셉터.pdf
+mvc2-v2022-05-15/v2022-05-15/8. 예외 처리와 오류 페이지.pdf
+mvc2-v2022-05-15/v2022-05-15/9. API 예외 처리.pdf
